--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # data folder
-data/
+data/cafa5
 colortheme-vscode.jsonc
 .vscode/
 
 # Byte-compiled / optimized / DLL files
+.DS_Store
 __pycache__/
 *.py[cod]
 *$py.class
